--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,8 @@
           </div>
 
           <nav>
-            <!--<a href="{{ site.baseurl }}/">Blog</a>-->
-            <a href="{{ site.baseurl }}/map">Map</a>
-            <a href="{{ site.baseurl }}/model">Model</a>
-            <a href="{{ site.baseurl }}/team">Team</a>
+            <a href="{{ site.baseurl }}/map">Diagrams</a>
+            <a href="{{ site.baseurl }}/model">Downloads</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
