--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/map">Diagrams</a>
-            <a href="{{ site.baseurl }}/model">Downloads</a>
+            <a href="{{ site.baseurl }}/diagrams">Diagrams</a>
+            <a href="{{ site.baseurl }}/downloads">Downloads</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
