--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/diagrams">Diagrams</a>
-            <a href="{{ site.baseurl }}/downloads">Downloads</a>
+            <!--<a href="{{ site.baseurl }}/downloads">Downloads</a>-->
             <a href="{{ site.baseurl }}/team">Team</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
