--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/diagrams">Diagrams</a>
-            <!--<a href="{{ site.baseurl }}/downloads">Downloads</a>-->
-            <a href="{{ site.baseurl }}/team">Team</a>
+            <a href="{{ site.baseurl }}/pathways">Pathways</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
